@@ -1,3 +1,8 @@
+2006-09-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* testutilities.tcl: Modified use commands to ensure that their
+	  output is a proper list.
+
 2006-09-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* testutilities.tcl: Added commands constructing wrong#args
